[project]
name = "bs-be18000"
version = "0.1.0"
description = "API client and CLI for the ASUS ROG Strix GS-BE18000 router"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "baconismycopilot", email = "justondroney@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.2",
    "httpx>=0.28.1",
]

[project.scripts]
bs-be18000 = "bs_be18000.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "respx>=0.23.1",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
